Project 10 - SimpleMemo App : DB전까지 구현 완료
- Long gesture

- Cell EditMode

- Cell 누를 시 MemoView에서 수정 가능.

--- a/Simple Memo App-Project10/Simple Memo App-Project10/Base.lproj/Main.storyboard
+++ b/Simple Memo App-Project10/Simple Memo App-Project10/Base.lproj/Main.storyboard
@@ -107,6 +107,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Memo" id="l1J-FE-wdL">
+                        <barButtonItem key="leftBarButtonItem" title="Done" id="pfX-r8-5k3">
+                            <connections>
+                                <action selector="editDone:" destination="K2o-W7-MQM" id="hYe-Rh-WGY"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" width="50" id="NmB-2V-YWG">
                             <imageReference key="image" image="plus" catalog="system" symbolScale="large" renderingMode="template"/>
                             <color key="tintColor" systemColor="systemGreenColor"/>
